--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="pt-br">
 <meta charset="UTF-8">
-<title></title>
+<title>Tô No Vaso</title>
 <meta name="viewport"
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
+<meta name="theme-color" content="#ffffff"/>
+<script>
+      (function(d) {
+            var config = {
+                          kitId: 'jhl4ayv',
+                          scriptTimeout: 3000,
+                          async: true
+                    },
+                    h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
+      })(document);
+</script>
 <script src="dist/js/villa.min.js"></script>
 <link rel="stylesheet" href="dist/css/villa.min.css"/>
 <!--[if lt IE 9]>
