Improve Select Improve TicketsOption

--- a/public/index.html
+++ b/public/index.html
@@ -4,31 +4,15 @@
 <title>Tô No Vaso</title>
 <meta name="viewport"
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
-<meta name="theme-color" content="#ffffff"/>
+<meta name="theme-color" content="#000000"/>
 <script>
-	(function (d) {
+	(function(d) {
 		var config = {
 					kitId: 'jhl4ayv',
 					scriptTimeout: 3000,
 					async: true
 				},
-				h = d.documentElement, t = setTimeout(function () {
-					h.className = h.className.replace(/\bwf-loading\b/g, "") + " wf-inactive";
-				}, config.scriptTimeout), tk = d.createElement("script"), f = false, s = d.getElementsByTagName("script")[0], a;
-		h.className += " wf-loading";
-		tk.src = 'https://use.typekit.net/' + config.kitId + '.js';
-		tk.async = true;
-		tk.onload = tk.onreadystatechange = function () {
-			a = this.readyState;
-			if (f || a && a != "complete" && a != "loaded")return;
-			f = true;
-			clearTimeout(t);
-			try {
-				Typekit.load(config)
-			} catch (e) {
-			}
-		};
-		s.parentNode.insertBefore(tk, s)
+				h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
 	})(document);
 </script>
 <script src="dist/js/villa.min.js"></script>
@@ -42,7 +26,7 @@
 <script src="dist/js/classList.min.js"></script>
 <![endif]-->
 
-<body>
+<body class="tk-proxima-nova">
 
 <div class="Tickets">
 
@@ -56,52 +40,73 @@
 
 				<div class="TicketsOption-inner">
 
-					<div class="TicketsOption-primary">
+					<div class="TicketsOption-header">
 
-						<h2 class="TicketOption-title">Pacote Masculino</h2>
+						<div class="TicketsOption-primary">
 
-						<div class="TicketOption-info">
+							<h2 class="TicketOption-title">Pacote Masculino | Pacote Promocional</h2>
 
-							<span class="TicketOption-price">300</span>
-							<span class="TicketOption-taxFee">(+R$24,00 TAXA)</span> <!-- 7,999% ~ 8% -->
+							<div class="TicketOption-info">
+
+								<span class="TicketOption-price">R$300,00</span>
+								<span class="TicketOption-taxFee">(+R$24,00 TAXA)</span> <!-- 7,999% ~ 8% -->
+
+							</div>
+
+						</div>
+
+						<div class="TicketsOption-secondary">
+
+							<div class="TicketsOption-quantity">
+
+								<div class="Select" data-name="select-01">
+
+									<div class="Select-inner">
+
+										<div class="Select-value"></div>
+										<div class="Select-arrow">
+
+											<span class="icon-keyboard_arrow_down"></span>
+
+										</div>
+
+										<select class="Select-select" name="quanity" id="q01">
+
+											<option value="0">0</option>
+											<option value="1">1</option>
+											<option value="2">2</option>
+											<option value="3">3</option>
+											<option value="4">4</option>
+											<option value="5">5</option>
+											<option value="6">6</option>
+											<option value="7">7</option>
+											<option value="8">8</option>
+											<option value="9">9</option>
+
+										</select>
+
+									</div>
+
+								</div>
+
+							</div>
 
 						</div>
 
 					</div>
 
-					<div class="TicketsOption-secondary">
+					<div class="TicketsOption-footer">
 
-						<div class="TicketsOption-quantity">
+						<div class="TicketsOption-description">
 
-							<div class="Select" data-name="select-01">
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid eaque libero numquam omnis perferendis perspiciatis quasi rerum saepe sed vitae. Atque eaque hic, laboriosam libero nam neque nesciunt non temporibus?</p>
 
-								<div class="Select-inner">
+						</div>
 
-									<div class="Select-value"></div>
-									<div class="Select-arrow">
+						<div class="TicketsOption-expand">
 
-										<span class="icon-keyboard_arrow_down"></span>
-
-									</div>
-
-									<select class="Select-select" name="quanity" id="q01">
-
-										<option value="0">0</option>
-										<option value="1">1</option>
-										<option value="2">2</option>
-										<option value="3">3</option>
-										<option value="4">4</option>
-										<option value="5">5</option>
-										<option value="6">6</option>
-										<option value="7">7</option>
-										<option value="8">8</option>
-										<option value="9">9</option>
-
-									</select>
-
-								</div>
-
-							</div>
+							<a href="#" class="TicketsOptions-showMore">Mais Informações</a>
+							<a class="TicketsOptions-showLess">Ocultar Informações</a>
 
 						</div>
 
@@ -115,52 +120,73 @@
 
 				<div class="TicketsOption-inner">
 
-					<div class="TicketsOption-primary">
+					<div class="TicketsOption-header">
 
-						<h2 class="TicketOption-title">Pacote Feminino</h2>
+						<div class="TicketsOption-primary">
 
-						<div class="TicketOption-info">
+							<h2 class="TicketOption-title">Pacote Feminino | Pacote Promocional</h2>
 
-							<span class="TicketOption-price">180</span>
-							<span class="TicketOption-taxFee">(+R$14,39 TAXA)</span> <!-- 7,999% ~ 8% -->
+							<div class="TicketOption-info">
+
+								<span class="TicketOption-price">R$180,00</span>
+								<span class="TicketOption-taxFee">(+R$14,39 TAXA)</span> <!-- 7,999% ~ 8% -->
+
+							</div>
+
+						</div>
+
+						<div class="TicketsOption-secondary">
+
+							<div class="TicketsOption-quantity">
+
+								<div class="Select" data-name="select-02">
+
+									<div class="Select-inner">
+
+										<div class="Select-value"></div>
+										<div class="Select-arrow">
+
+											<span class="icon-keyboard_arrow_down"></span>
+
+										</div>
+
+										<select class="Select-select" name="quanity" id="q02">
+
+											<option value="0">0</option>
+											<option value="1">1</option>
+											<option value="2">2</option>
+											<option value="3">3</option>
+											<option value="4">4</option>
+											<option value="5">5</option>
+											<option value="6">6</option>
+											<option value="7">7</option>
+											<option value="8">8</option>
+											<option value="9">9</option>
+
+										</select>
+
+									</div>
+
+								</div>
+
+							</div>
 
 						</div>
 
 					</div>
 
-					<div class="TicketsOption-secondary">
+					<div class="TicketsOption-footer">
 
-						<div class="TicketsOption-quantity">
+						<div class="TicketsOption-description">
 
-							<div class="Select" data-name="select-02">
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquid consectetur deserunt dolores, eius, ipsum iure magnam nisi placeat quam quasi quidem quo rerum sit ut! Obcaecati ratione repellat reprehenderit?</p>
 
-								<div class="Select-inner">
+						</div>
 
-									<div class="Select-value"></div>
-									<div class="Select-arrow">
+						<div class="TicketsOption-expand">
 
-										<span class="icon-keyboard_arrow_down"></span>
-
-									</div>
-
-									<select class="Select-select" name="quanity" id="q02">
-
-										<option value="0">0</option>
-										<option value="1">1</option>
-										<option value="2">2</option>
-										<option value="3">3</option>
-										<option value="4">4</option>
-										<option value="5">5</option>
-										<option value="6">6</option>
-										<option value="7">7</option>
-										<option value="8">8</option>
-										<option value="9">9</option>
-
-									</select>
-
-								</div>
-
-							</div>
+							<a href="#" class="TicketsOptions-showMore">Mais Informações</a>
+							<a class="TicketsOptions-showLess">Ocultar Informações</a>
 
 						</div>
 
@@ -185,6 +211,16 @@
 <script src="dist/js/tonovaso.js"></script>
 
 <script>
+
+	// get ticket options
+
+	var ticketsOptions = document.querySelectorAll('.TicketsOption');
+	var ticketsOptionsElements = [];
+
+	for (var i = ticketsOptions.length; i--; )
+		ticketsOptionsElements.push(new TicketsOption(ticketsOptions[i]));
+
+	// get select inputs
 
 	var SelectInputs = document.querySelectorAll('.Select');
 	var SelectInputElements = [];
