Add Header Add Nav Add Hero

--- a/public/tickets.html
+++ b/public/tickets.html
@@ -56,9 +56,9 @@
 
 </div>
 
-<header class="Header">
+<header class="TicketsHeader">
 
-	<div class="Header-inner container">
+	<div class="TicketsHeader-inner container">
 
 		<img src="dist/img/logo.png" alt=""/>
 
