Add About Add Paragraph Improve Button Improve Header Improve Hero Improve Nav Improve firebase config file

--- a/public/tickets.html
+++ b/public/tickets.html
@@ -60,7 +60,7 @@
 
 	<div class="TicketsHeader-inner container">
 
-		<img src="dist/img/logo.png" alt=""/>
+		<a href="./"><img src="dist/img/logo.png" alt=""/></a>
 
 		<p>Data: de 24/02/17 à 28/02/17 <br/>
 			14hs de Open Bar <br/> (todos os dias das 14h às 04h) <br/>
