--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,7 @@
 
 			<li class="NavItem">
 
-				<a href="#"><span>20 Anos</span></a>
+				<a href="20-anos"><span>20 Anos</span></a>
 
 			</li>
 
@@ -110,9 +110,9 @@
 
 </header>
 
-<section class="About">
+<section class="About grey-50" onclick="this.classList.add('is-theater');">
 
-	<div class="Paragraph font-brown-800">
+	<div class="Paragraph font-brown-900">
 
 		<div class="Paragraph-inner container">
 
