--- a/public/20-anos.html
+++ b/public/20-anos.html
@@ -75,8 +75,7 @@
 				<div class="Yearbook-secondary">
 
 					<h3>2015</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid aperiam ea earum eius libero provident quas, quo.
-						A alias autem consequatur ea harum libero magni, maiores minus, molestias, obcaecati rerum?</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis commodi consequatur, dolores dolorum ducimus enim eum ipsum iusto magni optio perspiciatis quaerat quibusdam reiciendis similique sint. Blanditiis cumque delectus laboriosam.</p>
 
 					<div class="YearbookGallery">
 
