--- a/public/player.html
+++ b/public/player.html
@@ -70,7 +70,7 @@
 <body>
 
 <div class="responsive">
-	<div id="player" class="youtube" data-id="9e2mMf1--v8" >
+	<div id="player" class="youtube">
 		<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30.1 30.1" class="play">
 			<path d="M20 14.4l-6.2-4.5c-0.2-0.2-0.5-0.2-0.8-0.1 -0.3 0.1-0.4 0.4-0.4 0.7v9.1c0 0.3 0.2 0.5 0.4 0.7 0.1 0.1 0.2 0.1 0.3 0.1 0.2 0 0.3 0 0.4-0.1l6.2-4.5c0.2-0.1 0.3-0.4 0.3-0.6C20.3 14.8 20.2 14.6 20 14.4z"/>
 			<path d="M15 0C6.7 0 0 6.7 0 15c0 8.3 6.7 15 15 15 8.3 0 15-6.7 15-15C30.1 6.7 23.3 0 15 0zM15 27.5c-6.9 0-12.5-5.6-12.5-12.5 0-6.9 5.6-12.5 12.5-12.5 6.9 0 12.5 5.6 12.5 12.5C27.5 21.9 21.9 27.5 15 27.5z"/>
@@ -81,6 +81,7 @@
 <button id="controlplay">Play</button>
 <button id="controlpause">Pause</button>
 <button id="controlstop">Stop</button>
+<button id="controlpower">Power</button>
 
 <script src="dist/js/tonovaso.js"></script>
 
@@ -92,6 +93,7 @@
 	// add buttons controllers
 	player.addControl('pause', document.getElementById('controlpause'));
 	player.addControl('play', document.getElementById('controlplay'));
+	player.addControl('power', document.getElementById('controlpower'));
 	player.addControl('stop', document.getElementById('controlstop'));
 
 </script>
