Add Aside Improve Button Improve Header Improve About

--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,20 @@
 
 <body class="tk-proxima-nova">
 
+<aside class="Aside">
+
+	<div class="Aside-inner">
+
+		<div class="Aside-text">
+
+			<span>24 a 28 de fevereiro de 2017, Palmital - SP</span>
+
+		</div>
+
+	</div>
+
+</aside>
+
 <header class="Header tk-tenby-four">
 
 	<div class="Hero">
@@ -105,6 +119,8 @@
 			<span>Ingressos</span>
 
 		</a>
+
+		<p>24 a 28 de fevereiro de 2017</p>
 
 	</div>
 
