Add Aside Button Improve Aside

--- a/public/index.html
+++ b/public/index.html
@@ -44,13 +44,59 @@
 
 <body class="tk-proxima-nova">
 
-<aside class="Aside">
+<aside class="Aside font-grey-700">
 
 	<div class="Aside-inner">
 
-		<div class="Aside-text">
+		<div class="Aside-content">
 
-			<span>24 a 28 de fevereiro de 2017, Palmital - SP</span>
+			<div class="Aside-text">
+
+				<span>24 a 28 de fevereiro de 2017, Palmital - SP</span>
+
+			</div>
+
+			<div class="AsideButton AsideButton--messenger">
+
+				<a href="https://www.messenger.com/t/tonovaso.palmital/" class="AsideButton-selectArea" draggable="false">
+
+					<div class="AsideButton-icon">
+
+						<span class="icon-facebook-messenger"></span>
+
+					</div>
+
+				</a>
+
+			</div>
+
+			<div class="AsideButton AsideButton--instagram">
+
+				<a href="https://www.instagram.com/braztnv" class="AsideButton-selectArea" draggable="false">
+
+					<div class="AsideButton-icon">
+
+						<span class="icon-instagram"></span>
+
+					</div>
+
+				</a>
+
+			</div>
+
+			<div class="AsideButton AsideButton--facebook">
+
+				<a href="https://www.facebook.com/tonovaso.palmital/" class="AsideButton-selectArea" draggable="false">
+
+					<div class="AsideButton-icon">
+
+						<span class="icon-facebook"></span>
+
+					</div>
+
+				</a>
+
+			</div>
 
 		</div>
 
