--- a/public/index.html
+++ b/public/index.html
@@ -261,6 +261,21 @@
 
 </section>
 
+<footer class="Footer">
+
+	<div class="Footer-inner container">
+
+		<p>Bloco Tô No Vaso 2016</p>
+
+		<p>BERSI SERLINI WINERY</p>
+		<p>Via Cerreto, 7 - 25050 Provaglio di Iseo (BS)</p>
+		<p>T. 030 9823338 - F. 030 983234 - visite@bersiserlini.it</p>
+		<p>www.bersiserlini.it Adoratorio © 2016</p>
+
+	</div>
+
+</footer>
+
 <script src="dist/js/underscore-min.js"></script>
 <script src="dist/js/tonovaso.js"></script>
 
