--- a/public/index.html
+++ b/public/index.html
@@ -163,7 +163,7 @@
 
 			<li class="NavItem">
 
-				<a href="#"><span>Contato</span></a>
+				<a href="contato"><span>Contato</span></a>
 
 			</li>
 
